--- a/portfolio.html
+++ b/portfolio.html
@@ -7,6 +7,123 @@
     <title>Portfolio</title>
 </head>
 <body>
-    
+    <!-- Шапка сайта -->
+    <header>
+        <nav>
+            <a href="./index.html">WebStudio</a>
+            <ul>
+                <li><a href="">Студия</a></li>
+                <li><a href="./portfolio.html">Портфолио</a></li>
+                <li><a href="">Контакты</a></li>
+            </ul>
+        </nav>
+        <ul>
+            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        </ul>
+    </header>
+    <!-- Основная часть -->
+    <main>
+        <!-- Фильтры -->
+        <div>
+            <ul>
+                <li>
+                    <button type="button">Все</button>
+                </li>
+                <li>
+                    <button type="button">Веб-сайты</button>
+                </li>
+                <li>
+                    <button type="button">Приложения</button>
+                </li>
+                <li>
+                    <button type="button">Дизайн</button>
+                </li>
+                <li>
+                    <button type="button">Маркетинг</button>
+                </li>
+            </ul>
+        </div>
+        <!-- Примеры работ -->
+        <section>
+            <h1 hidden>Примеры портфолио</h1>
+            <ul>
+                <li>
+                    <a href="">
+                        <img src="./img/portfolio1.jpg" alt="Веб-сайт" width="370" height="294">
+                    </a>
+                    <h2>Технокряк</h2>
+                    <p>Веб-сайт</p>
+                </li>
+            </ul>
+                <li>
+                    <a href="">
+                        <img src="./img/portfolio2.jpg" alt="Дизайн" width="370" height="294">
+                    </a>
+                    <h2>Постер New Orlean vs Golden Star</h2>
+                    <p>Дизайн</p>
+                </li>
+                <li>
+                    <a href="">
+                        <img src="./img/portfolio3.jpg" alt="Приложение" width="370" height="294">
+                    </a>
+                    <h2>Ресторан Seafood</h2>
+                    <p>Приложение</p>
+                </li>
+                <li>
+                    <a href="">
+                        <img src="./img/portfolio4.jpg" alt="Маркетинг" width="370" height="294">
+                    </a>
+                    <h2>Проект Prime</h2>
+                    <p>Маркетинг</p>
+                </li>
+                <li>
+                    <a href="">
+                        <img src="./img/portfolio5.jpg" alt="Приложение" width="370" height="294">
+                    </a>
+                    <h2>Проект Boxes</h2>
+                    <p>Веб-сайт</p>
+                </li>
+                <li>
+                    <a href="">
+                        <img src="./img/portfolio6.jpg" alt="Веб-сайт" width="370" height="294">
+                    </a>
+                    <h2>Inspiration has no Borders</h2>
+                    <p>Веб-сайт</p>
+                </li>
+                <li>
+                    <a href="">
+                        <img src="./img/portfolio7.jpg" alt="Дизайн" width="370" height="294">
+                    </a>
+                    <h2>Издание Limited Edition</h2>
+                    <p>Дизайн</p>
+                </li>
+                <li>
+                    <a href="">
+                        <img src="./img/portfolio8.jpg" alt="Маркетинг" width="370" height="294">
+                    </a>
+                    <h2>Проект LAB</h2>
+                    <p>Маркетинг</p>
+                </li>
+                <li>
+                    <a href="">
+                        <img src="./img/portfolio9.jpg" alt="Веб-сайт" width="370" height="294">
+                    </a>
+                    <h2>Growing Business</h2>
+                    <p>Приложение</p>
+                </li>
+        </section>
+    </main>
+    <!-- Подвал -->
+    <footer>
+        <a href="./index.html">WebStudio</a>
+        <address>
+            <ul>
+                <li><a href="https://goo.gl/maps/FyRtDCah4eufWKgu7" target="_blank">г. Киев, пр-т Леси Украинки, 26</a></li>
+                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+            </ul>
+        </address>
+    </footer>
 </body>
 </html>
