Начал добавлять классы

--- a/portfolio.html
+++ b/portfolio.html
@@ -5,49 +5,48 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <!-- Шапка сайта -->
     <header>
         <nav>
-            <a href="./index.html">WebStudio</a>
-            <ul>
-                <li><a href="">Студия</a></li>
-                <li><a href="./portfolio.html">Портфолио</a></li>
-                <li><a href="">Контакты</a></li>
+            <a class="logo" href="./index.html"><span class="web-logo">Web</span>Studio</a>
+            <ul class="site-nav list">
+                <li><a class="link" href="./index.html">Студия</a></li>
+                <li><a class="link current" href="./portfolio.html">Портфолио</a></li>
+                <li><a class="link" href="">Контакты</a></li>
             </ul>
         </nav>
-        <ul>
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <ul class="site-nav list">
+            <li><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
     </header>
     <!-- Основная часть -->
     <main>
-        <!-- Фильтры -->
-        <div>
-            <ul>
-                <li>
-                    <button type="button">Все</button>
-                </li>
-                <li>
-                    <button type="button">Веб-сайты</button>
-                </li>
-                <li>
-                    <button type="button">Приложения</button>
-                </li>
-                <li>
-                    <button type="button">Дизайн</button>
-                </li>
-                <li>
-                    <button type="button">Маркетинг</button>
-                </li>
-            </ul>
-        </div>
-        <!-- Примеры работ -->
         <section>
             <h1 hidden>Примеры портфолио</h1>
-            <ul>
+            <!-- Фильтры -->
+            <ul class="filter list">
+                <li>
+                    <button class="but current" type="button">Все</button>
+                </li>
+                <li>
+                    <button class="but" type="button">Веб-сайты</button>
+                </li>
+                <li>
+                    <button class="but" type="button">Приложения</button>
+                </li>
+                <li>
+                    <button class="but" type="button">Дизайн</button>
+                </li>
+                <li>
+                    <button class="but" type="button">Маркетинг</button>
+                </li>
+            </ul>
+            <!-- Примеры работ -->
+            <ul class="list">
                 <li>
                     <a href="">
                         <img src="./img/portfolio1.jpg" alt="Веб-сайт" width="370" height="294">
@@ -55,7 +54,6 @@
                     <h2>Технокряк</h2>
                     <p>Веб-сайт</p>
                 </li>
-            </ul>
                 <li>
                     <a href="">
                         <img src="./img/portfolio2.jpg" alt="Дизайн" width="370" height="294">
@@ -112,13 +110,14 @@
                     <h2>Growing Business</h2>
                     <p>Приложение</p>
                 </li>
+            </ul>
         </section>
     </main>
     <!-- Подвал -->
     <footer>
-        <a href="./index.html">WebStudio</a>
+        <a class="logo" href="./index.html"><span class="web-logo">Web</span>Studio</a>
         <address>
-            <ul>
+            <ul class="list">
                 <li><a href="https://goo.gl/maps/FyRtDCah4eufWKgu7" target="_blank">г. Киев, пр-т Леси Украинки, 26</a></li>
                 <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                 <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
