--- a/index.html
+++ b/index.html
@@ -19,73 +19,73 @@
                 <li><a class="link" href="">Контакты</a></li>
             </ul>
         </nav>
-        <ul class="site-nav list">
-            <li><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <ul class="contact-nav list">
+            <li><a class="link section-text" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a class="link section-text" href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
     </header>
     
     <!-- Основная часть -->
     <main>
         <!-- Герой -->
-        <section>
-            <h1>Эффективные решения <br>для вашего бизнеса</h1>
+        <section class="hero">
+            <h1 class="hero-title">Эффективные решения <br>для вашего бизнеса</h1>
             <button type="button">Заказать услугу</button>
         </section>
         <!-- Наши особенности -->
-        <section>
+        <section class="section">
             <h2 hidden>Наши особенности</h2>
-            <ul class="list">
+            <ul class="feature-list list">
                 <li>
                     <h3>Внимание к деталям</h3>
-                    <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                    <p class="section-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                 </li>
                 <li>
                     <h3>Пунктуальность</h3>
-                    <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                    <p class="section-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                 </li>
                 <li>
                     <h3>Планирование</h3>
-                    <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                    <p class="section-text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                 </li>
                 <li>
                     <h3>Современные технологии</h3>
-                    <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                    <p class="section-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                 </li>
             </ul>
         </section>
         <!-- Чем мы занимаемся -->
-        <section>
+        <section class="section">
             <h2>Чем мы занимаемся</h2>
-            <ul class="list">
+            <ul class="work-list list">
                 <li><img src="./img/img_about1.jpg" alt="чем мы занимаемся" width="370"></li>
                 <li><img src="./img/img_about2.jpg" alt="чем мы занимаемся" width="370"></li>
                 <li><img src="./img/img_about3.jpg" alt="чем мы занимаемся" width="370"></li>
             </ul>
         </section>
         <!-- Наша команда -->
-        <section>
+        <section class="section">
             <h2>Наша команда</h2>
-            <ul class="list">
+            <ul class="team-list list">
                 <li>
                     <img src="img/team_card_1.jpg" alt="Игорь Демьяненко" width="270">
                     <h3>Игорь Демьяненко</h3>
-                    <p>Product Designer</p>
+                    <p class="section-text">Product Designer</p>
                 </li>
                 <li>
                     <img src="img/team_card_2.jpg" alt="Ольга Репина" width="270">
                     <h3>Ольга Репина</h3>
-                    <p>Frontend Developer</p>
+                    <p class="section-text">Frontend Developer</p>
                 </li>
                 <li>
                     <img src="img/team_card_3.jpg" alt="Николай Тарасов" width="270">
                     <h3>Николай Тарасов</h3>
-                    <p>Marketing</p>
+                    <p class="section-text">Marketing</p>
                 </li>
                 <li>
                     <img src="img/team_card_4.jpg" alt="Михаил Ермаков" width="270">
                     <h3>Михаил Ермаков</h3>
-                    <p>UI Designer</p>
+                    <p class="section-text">UI Designer</p>
                 </li>
             </ul>
         </section>
