--- a/portfolio.html
+++ b/portfolio.html
@@ -18,9 +18,9 @@
                 <li><a class="link" href="">Контакты</a></li>
             </ul>
         </nav>
-        <ul class="site-nav list">
-            <li><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <ul class="contact-nav list">
+            <li><a class="link section-text" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a class="link section-text" href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
     </header>
     <!-- Основная часть -->
@@ -52,63 +52,63 @@
                         <img src="./img/portfolio1.jpg" alt="Веб-сайт" width="370" height="294">
                     </a>
                     <h2>Технокряк</h2>
-                    <p>Веб-сайт</p>
+                    <p class="section-text">Веб-сайт</p>
                 </li>
                 <li>
                     <a href="">
                         <img src="./img/portfolio2.jpg" alt="Дизайн" width="370" height="294">
                     </a>
                     <h2>Постер New Orlean vs Golden Star</h2>
-                    <p>Дизайн</p>
+                    <p class="section-text">Дизайн</p>
                 </li>
                 <li>
                     <a href="">
                         <img src="./img/portfolio3.jpg" alt="Приложение" width="370" height="294">
                     </a>
                     <h2>Ресторан Seafood</h2>
-                    <p>Приложение</p>
+                    <p class="section-text">Приложение</p>
                 </li>
                 <li>
                     <a href="">
                         <img src="./img/portfolio4.jpg" alt="Маркетинг" width="370" height="294">
                     </a>
                     <h2>Проект Prime</h2>
-                    <p>Маркетинг</p>
+                    <p class="section-text">Маркетинг</p>
                 </li>
                 <li>
                     <a href="">
                         <img src="./img/portfolio5.jpg" alt="Приложение" width="370" height="294">
                     </a>
                     <h2>Проект Boxes</h2>
-                    <p>Веб-сайт</p>
+                    <p class="section-text">Веб-сайт</p>
                 </li>
                 <li>
                     <a href="">
                         <img src="./img/portfolio6.jpg" alt="Веб-сайт" width="370" height="294">
                     </a>
                     <h2>Inspiration has no Borders</h2>
-                    <p>Веб-сайт</p>
+                    <p class="section-text">Веб-сайт</p>
                 </li>
                 <li>
                     <a href="">
                         <img src="./img/portfolio7.jpg" alt="Дизайн" width="370" height="294">
                     </a>
                     <h2>Издание Limited Edition</h2>
-                    <p>Дизайн</p>
+                    <p class="section-text">Дизайн</p>
                 </li>
                 <li>
                     <a href="">
                         <img src="./img/portfolio8.jpg" alt="Маркетинг" width="370" height="294">
                     </a>
                     <h2>Проект LAB</h2>
-                    <p>Маркетинг</p>
+                    <p class="section-text">Маркетинг</p>
                 </li>
                 <li>
                     <a href="">
                         <img src="./img/portfolio9.jpg" alt="Веб-сайт" width="370" height="294">
                     </a>
                     <h2>Growing Business</h2>
-                    <p>Приложение</p>
+                    <p class="section-text">Приложение</p>
                 </li>
             </ul>
         </section>
