--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- Шапка сайта -->
     <header>
         <nav>
-            <a class="logo" href="./index.html"><span class="web-logo">Web</span>Studio</a>
+            <a class="link logo" href="./index.html"><span class="web-logo">Web</span>Studio</a>
             <ul class="site-nav list">
                 <li><a class="link current" href="./index.html">Студия</a></li>
                 <li><a class="link" href="./portfolio.html">Портфолио</a></li>
@@ -30,33 +30,33 @@
         <!-- Герой -->
         <section class="hero">
             <h1 class="hero-title">Эффективные решения <br>для вашего бизнеса</h1>
-            <button type="button">Заказать услугу</button>
+            <button class="but" type="button">Заказать услугу</button>
         </section>
         <!-- Наши особенности -->
         <section class="section">
-            <h2 hidden>Наши особенности</h2>
+            <h2 hidden class="section-title">Наши особенности</h2>
             <ul class="feature-list list">
                 <li>
-                    <h3>Внимание к деталям</h3>
+                    <h3 class="title">Внимание к деталям</h3>
                     <p class="section-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                 </li>
                 <li>
-                    <h3>Пунктуальность</h3>
+                    <h3 class="title">Пунктуальность</h3>
                     <p class="section-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                 </li>
                 <li>
-                    <h3>Планирование</h3>
+                    <h3 class="title">Планирование</h3>
                     <p class="section-text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                 </li>
                 <li>
-                    <h3>Современные технологии</h3>
+                    <h3 class="title">Современные технологии</h3>
                     <p class="section-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                 </li>
             </ul>
         </section>
         <!-- Чем мы занимаемся -->
         <section class="section">
-            <h2>Чем мы занимаемся</h2>
+            <h2 class="section-title">Чем мы занимаемся</h2>
             <ul class="work-list list">
                 <li><img src="./img/img_about1.jpg" alt="чем мы занимаемся" width="370"></li>
                 <li><img src="./img/img_about2.jpg" alt="чем мы занимаемся" width="370"></li>
@@ -65,26 +65,26 @@
         </section>
         <!-- Наша команда -->
         <section class="section">
-            <h2>Наша команда</h2>
+            <h2 class="section-title">Наша команда</h2>
             <ul class="team-list list">
                 <li>
                     <img src="img/team_card_1.jpg" alt="Игорь Демьяненко" width="270">
-                    <h3>Игорь Демьяненко</h3>
+                    <h3 class="title">Игорь Демьяненко</h3>
                     <p class="section-text">Product Designer</p>
                 </li>
                 <li>
                     <img src="img/team_card_2.jpg" alt="Ольга Репина" width="270">
-                    <h3>Ольга Репина</h3>
+                    <h3 class="title">Ольга Репина</h3>
                     <p class="section-text">Frontend Developer</p>
                 </li>
                 <li>
                     <img src="img/team_card_3.jpg" alt="Николай Тарасов" width="270">
-                    <h3>Николай Тарасов</h3>
+                    <h3 class="title">Николай Тарасов</h3>
                     <p class="section-text">Marketing</p>
                 </li>
                 <li>
                     <img src="img/team_card_4.jpg" alt="Михаил Ермаков" width="270">
-                    <h3>Михаил Ермаков</h3>
+                    <h3 class="title">Михаил Ермаков</h3>
                     <p class="section-text">UI Designer</p>
                 </li>
             </ul>
@@ -93,12 +93,12 @@
     
     <!-- Подвал -->
     <footer>
-        <a class="logo" href="./index.html"><span class="web-logo">Web</span>Studio</a>
+        <a class="link logo" href="./index.html"><span class="web-logo">Web</span>Studio</a>
         <address>
             <ul class="list">
-                <li><a href="https://goo.gl/maps/FyRtDCah4eufWKgu7" target="_blank">г. Киев, пр-т Леси Украинки, 26</a></li>
-                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+                <li><a class="link" href="https://goo.gl/maps/FyRtDCah4eufWKgu7" target="_blank">г. Киев, пр-т Леси Украинки, 26</a></li>
+                <li><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
             </ul>
         </address>
     </footer>
