--- a/portfolio.html
+++ b/portfolio.html
@@ -11,7 +11,7 @@
     <!-- Шапка сайта -->
     <header>
         <nav>
-            <a class="logo" href="./index.html"><span class="web-logo">Web</span>Studio</a>
+            <a class="link logo" href="./index.html"><span class="web-logo">Web</span>Studio</a>
             <ul class="site-nav list">
                 <li><a class="link" href="./index.html">Студия</a></li>
                 <li><a class="link current" href="./portfolio.html">Портфолио</a></li>
@@ -115,12 +115,12 @@
     </main>
     <!-- Подвал -->
     <footer>
-        <a class="logo" href="./index.html"><span class="web-logo">Web</span>Studio</a>
+        <a class="link logo" href="./index.html"><span class="web-logo">Web</span>Studio</a>
         <address>
             <ul class="list">
-                <li><a href="https://goo.gl/maps/FyRtDCah4eufWKgu7" target="_blank">г. Киев, пр-т Леси Украинки, 26</a></li>
-                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+                <li><a class="link" href="https://goo.gl/maps/FyRtDCah4eufWKgu7" target="_blank">г. Киев, пр-т Леси Украинки, 26</a></li>
+                <li><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
             </ul>
         </address>
     </footer>
