--- a/portfolio.html
+++ b/portfolio.html
@@ -9,118 +9,118 @@
 </head>
 <body>
     <!-- Шапка сайта -->
-    <header>
+    <header class="header">
         <nav>
-            <a class="link logo" href="./index.html"><span class="web-logo">Web</span>Studio</a>
-            <ul class="site-nav list">
-                <li><a class="link" href="./index.html">Студия</a></li>
-                <li><a class="link current" href="./portfolio.html">Портфолио</a></li>
-                <li><a class="link" href="">Контакты</a></li>
+            <a class="header-logo link" href="./index.html"><span class="web-logo">Web</span>Studio</a>
+            <ul class="nav-list list">
+                <li class="nav-item"><a class="link" href="./index.html">Студия</a></li>
+                <li class="nav-item"><a class="link current" href="./portfolio.html">Портфолио</a></li>
+                <li class="nav-item"><a class="link" href="">Контакты</a></li>
             </ul>
         </nav>
-        <ul class="contact-nav list">
-            <li><a class="link section-text" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a class="link section-text" href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <ul class="contact-list list">
+            <li class="contact-item"><a class="contact-text link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li class="contact-item"><a class="contact-text link" href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
     </header>
     <!-- Основная часть -->
     <main>
-        <section>
+        <section class="filter">
             <h1 hidden>Примеры портфолио</h1>
             <!-- Фильтры -->
             <ul class="filter list">
-                <li>
-                    <button class="but current" type="button">Все</button>
+                <li class="filter-item">
+                    <button class="btn current" type="button">Все</button>
                 </li>
-                <li>
-                    <button class="but" type="button">Веб-сайты</button>
+                <li class="filter-item">
+                    <button class="btn" type="button">Веб-сайты</button>
                 </li>
-                <li>
-                    <button class="but" type="button">Приложения</button>
+                <li class="filter-item">
+                    <button class="btn" type="button">Приложения</button>
                 </li>
-                <li>
-                    <button class="but" type="button">Дизайн</button>
+                <li class="filter-item">
+                    <button class="btn" type="button">Дизайн</button>
                 </li>
-                <li>
-                    <button class="but" type="button">Маркетинг</button>
+                <li class="filter-item">
+                    <button class="btn" type="button">Маркетинг</button>
                 </li>
             </ul>
             <!-- Примеры работ -->
-            <ul class="list">
-                <li>
+            <ul class="work-list list">
+                <li class="work-item">
                     <a href="">
                         <img src="./img/portfolio1.jpg" alt="Веб-сайт" width="370" height="294">
                     </a>
-                    <h2>Технокряк</h2>
-                    <p class="section-text">Веб-сайт</p>
+                    <h2 class="work-title">Технокряк</h2>
+                    <p class="work-text">Веб-сайт</p>
                 </li>
-                <li>
+                <li class="work-item">
                     <a href="">
                         <img src="./img/portfolio2.jpg" alt="Дизайн" width="370" height="294">
                     </a>
-                    <h2>Постер New Orlean vs Golden Star</h2>
-                    <p class="section-text">Дизайн</p>
+                    <h2 class="work-title">Постер New Orlean vs Golden Star</h2>
+                    <p class="work-text">Дизайн</p>
                 </li>
-                <li>
+                <li class="work-item">
                     <a href="">
                         <img src="./img/portfolio3.jpg" alt="Приложение" width="370" height="294">
                     </a>
-                    <h2>Ресторан Seafood</h2>
-                    <p class="section-text">Приложение</p>
+                    <h2 class="work-title">Ресторан Seafood</h2>
+                    <p class="work-text">Приложение</p>
                 </li>
-                <li>
+                <li class="work-item">
                     <a href="">
                         <img src="./img/portfolio4.jpg" alt="Маркетинг" width="370" height="294">
                     </a>
-                    <h2>Проект Prime</h2>
-                    <p class="section-text">Маркетинг</p>
+                    <h2 class="work-title">Проект Prime</h2>
+                    <p class="work-text">Маркетинг</p>
                 </li>
-                <li>
+                <li class="work-item">
                     <a href="">
                         <img src="./img/portfolio5.jpg" alt="Приложение" width="370" height="294">
                     </a>
-                    <h2>Проект Boxes</h2>
-                    <p class="section-text">Веб-сайт</p>
+                    <h2 class="work-title">Проект Boxes</h2>
+                    <p class="work-text">Веб-сайт</p>
                 </li>
-                <li>
+                <li class="work-item">
                     <a href="">
                         <img src="./img/portfolio6.jpg" alt="Веб-сайт" width="370" height="294">
                     </a>
-                    <h2>Inspiration has no Borders</h2>
-                    <p class="section-text">Веб-сайт</p>
+                    <h2 class="work-title">Inspiration has no Borders</h2>
+                    <p class="work-text">Веб-сайт</p>
                 </li>
-                <li>
+                <li class="work-item">
                     <a href="">
                         <img src="./img/portfolio7.jpg" alt="Дизайн" width="370" height="294">
                     </a>
-                    <h2>Издание Limited Edition</h2>
-                    <p class="section-text">Дизайн</p>
+                    <h2 class="work-title">Издание Limited Edition</h2>
+                    <p class="work-text">Дизайн</p>
                 </li>
-                <li>
+                <li class="work-item">
                     <a href="">
                         <img src="./img/portfolio8.jpg" alt="Маркетинг" width="370" height="294">
                     </a>
-                    <h2>Проект LAB</h2>
-                    <p class="section-text">Маркетинг</p>
+                    <h2 class="work-title">Проект LAB</h2>
+                    <p class="work-text">Маркетинг</p>
                 </li>
-                <li>
+                <li class="work-item">
                     <a href="">
                         <img src="./img/portfolio9.jpg" alt="Веб-сайт" width="370" height="294">
                     </a>
-                    <h2>Growing Business</h2>
-                    <p class="section-text">Приложение</p>
+                    <h2 class="work-title">Growing Business</h2>
+                    <p class="work-text">Приложение</p>
                 </li>
             </ul>
         </section>
     </main>
     <!-- Подвал -->
-    <footer>
-        <a class="link logo" href="./index.html"><span class="web-logo">Web</span>Studio</a>
-        <address>
-            <ul class="list">
-                <li><a class="link" href="https://goo.gl/maps/FyRtDCah4eufWKgu7" target="_blank">г. Киев, пр-т Леси Украинки, 26</a></li>
-                <li><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+    <footer class="footer">
+        <a class="footer-logo link" href="./index.html"><span class="web-logo">Web</span>Studio</a>
+        <address class="footer-adress">
+            <ul class="footer-list list">
+                <li class="footer-item"><a class="footer-link link" href="https://goo.gl/maps/FyRtDCah4eufWKgu7" target="_blank">г. Киев, пр-т Леси Украинки, 26</a></li>
+                <li class="footer-item"><a class="footer-link link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li class="footer-item"><a class="footer-link link" href="tel:+380961111111">+38 096 111 11 11</a></li>
             </ul>
         </address>
     </footer>
