--- a/portfolio.html
+++ b/portfolio.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
@@ -30,81 +34,81 @@
             <!-- Фильтры -->
             <ul class="filter list">
                 <li class="filter-item">
-                    <button class="btn current" type="button">Все</button>
+                    <button class="filter-btn current" type="button">Все</button>
                 </li>
                 <li class="filter-item">
-                    <button class="btn" type="button">Веб-сайты</button>
+                    <button class="filter-btn" type="button">Веб-сайты</button>
                 </li>
                 <li class="filter-item">
-                    <button class="btn" type="button">Приложения</button>
+                    <button class="filter-btn" type="button">Приложения</button>
                 </li>
                 <li class="filter-item">
-                    <button class="btn" type="button">Дизайн</button>
+                    <button class="filter-btn" type="button">Дизайн</button>
                 </li>
                 <li class="filter-item">
-                    <button class="btn" type="button">Маркетинг</button>
+                    <button class="filter-btn" type="button">Маркетинг</button>
                 </li>
             </ul>
             <!-- Примеры работ -->
             <ul class="work-list list">
                 <li class="work-item">
-                    <a href="">
+                    <a class="work-link" href="">
                         <img src="./img/portfolio1.jpg" alt="Веб-сайт" width="370" height="294">
                     </a>
                     <h2 class="work-title">Технокряк</h2>
                     <p class="work-text">Веб-сайт</p>
                 </li>
                 <li class="work-item">
-                    <a href="">
+                    <a class="work-link" href="">
                         <img src="./img/portfolio2.jpg" alt="Дизайн" width="370" height="294">
                     </a>
                     <h2 class="work-title">Постер New Orlean vs Golden Star</h2>
                     <p class="work-text">Дизайн</p>
                 </li>
                 <li class="work-item">
-                    <a href="">
+                    <a class="work-link" href="">
                         <img src="./img/portfolio3.jpg" alt="Приложение" width="370" height="294">
                     </a>
                     <h2 class="work-title">Ресторан Seafood</h2>
                     <p class="work-text">Приложение</p>
                 </li>
                 <li class="work-item">
-                    <a href="">
+                    <a class="work-link" href="">
                         <img src="./img/portfolio4.jpg" alt="Маркетинг" width="370" height="294">
                     </a>
                     <h2 class="work-title">Проект Prime</h2>
                     <p class="work-text">Маркетинг</p>
                 </li>
                 <li class="work-item">
-                    <a href="">
+                    <a class="work-link" href="">
                         <img src="./img/portfolio5.jpg" alt="Приложение" width="370" height="294">
                     </a>
                     <h2 class="work-title">Проект Boxes</h2>
                     <p class="work-text">Веб-сайт</p>
                 </li>
                 <li class="work-item">
-                    <a href="">
+                    <a class="work-link" href="">
                         <img src="./img/portfolio6.jpg" alt="Веб-сайт" width="370" height="294">
                     </a>
                     <h2 class="work-title">Inspiration has no Borders</h2>
                     <p class="work-text">Веб-сайт</p>
                 </li>
                 <li class="work-item">
-                    <a href="">
+                    <a class="work-link" href="">
                         <img src="./img/portfolio7.jpg" alt="Дизайн" width="370" height="294">
                     </a>
                     <h2 class="work-title">Издание Limited Edition</h2>
                     <p class="work-text">Дизайн</p>
                 </li>
                 <li class="work-item">
-                    <a href="">
+                    <a class="work-link" href="">
                         <img src="./img/portfolio8.jpg" alt="Маркетинг" width="370" height="294">
                     </a>
                     <h2 class="work-title">Проект LAB</h2>
                     <p class="work-text">Маркетинг</p>
                 </li>
                 <li class="work-item">
-                    <a href="">
+                    <a class="work-link" href="">
                         <img src="./img/portfolio9.jpg" alt="Веб-сайт" width="370" height="294">
                     </a>
                     <h2 class="work-title">Growing Business</h2>
