--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
         <section class="activity">
             <h2 class="activity-title">Чем мы занимаемся</h2>
             <ul class="activity-list list">
-                <li class="activity-item"><img src="./img/img_about1.jpg" alt="чем мы занимаемся" width="370"></li>
-                <li class="activity-item"><img src="./img/img_about2.jpg" alt="чем мы занимаемся" width="370"></li>
-                <li class="activity-item"><img src="./img/img_about3.jpg" alt="чем мы занимаемся" width="370"></li>
+                <li class="activity-item"><img src="./img/img_about1.jpg" alt="чем мы занимаемся" width="370" height="294"></li>
+                <li class="activity-item"><img src="./img/img_about2.jpg" alt="чем мы занимаемся" width="370" height="294"></li>
+                <li class="activity-item"><img src="./img/img_about3.jpg" alt="чем мы занимаемся" width="370" height="294"></li>
             </ul>
         </section>
         <!-- Наша команда -->
@@ -73,22 +73,22 @@
             <ul class="team-list list">
                 <li class="team-item">
                     <img src="img/team_card_1.jpg" alt="Игорь Демьяненко" width="270">
-                    <h3 class="team-title">Игорь Демьяненко</h3>
+                    <h3 class="team-title-name">Игорь Демьяненко</h3>
                     <p class="team-text">Product Designer</p>
                 </li>
                 <li class="team-item">
                     <img src="img/team_card_2.jpg" alt="Ольга Репина" width="270">
-                    <h3 class="team-title">Ольга Репина</h3>
+                    <h3 class="team-title-name">Ольга Репина</h3>
                     <p class="team-text">Frontend Developer</p>
                 </li>
                 <li class="team-item">
                     <img src="img/team_card_3.jpg" alt="Николай Тарасов" width="270">
-                    <h3 class="team-title">Николай Тарасов</h3>
+                    <h3 class="team-title-name">Николай Тарасов</h3>
                     <p class="team-text">Marketing</p>
-                </li class="team-item">
-                <li>
+                </li>
+                <li class="team-item">
                     <img src="img/team_card_4.jpg" alt="Михаил Ермаков" width="270">
-                    <h3 class="team-title">Михаил Ермаков</h3>
+                    <h3 class="team-title-name">Михаил Ермаков</h3>
                     <p class="team-text">UI Designer</p>
                 </li>
             </ul>
@@ -100,7 +100,7 @@
         <a class="footer-logo link" href="./index.html"><span class="web-logo">Web</span>Studio</a>
         <address class="footer-adress">
             <ul class="footer-list list">
-                <li class="footer-item"><a class="footer-link link" href="https://goo.gl/maps/FyRtDCah4eufWKgu7" target="_blank">г. Киев, пр-т Леси Украинки, 26</a></li>
+                <li class="footer-item"><a class="footer-link adr link" href="https://goo.gl/maps/FyRtDCah4eufWKgu7" target="_blank">г. Киев, пр-т Леси Украинки, 26</a></li>
                 <li class="footer-item"><a class="footer-link link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                 <li class="footer-item"><a class="footer-link link" href="tel:+380961111111">+38 096 111 11 11</a></li>
             </ul>
